<resources>
    <string name="app_name">Route Tracker</string>
    <string name="title_activity_homescreen">Home</string>
    <string name="channel_name">a</string>
    <string name="description">b</string>
    <string name="searchbar">  Enter Location Address or Postcode</string>
    <string name="settingsbtn">Settings</string>
    <string name="getdirectionsbtn">Get Directions</string>
    <string name="saveddestbtn">Saved Destinations</string>
    <string name="pin">PIN</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="securityquestion">Security Question:</string>
    <string name="answer">Answer</string>
    <string name="age">Age</string>
    <string name="sex">Sex:</string>
    <string name="height">Height (cm)</string>
    <string name="submit">Submit</string>
    <string name="newuser">New User</string>
    <string name="DeleteAcc">Delete Account</string>
    <string name="back">Back</string>
    <string name="savechanges">Save Changes</string>
    <string name="hair">Hair Colour</string>
    <string name="accel">Accelerometers and Gyroscopes</string>
    <string name="contactpolice">Contact Police</string>
    <string name="changepin">Change PIN</string>
    <string name="weight">Weight (kg)</string>
    <string name="distance">Distance : </string>
    <string name="emergencycontact">Emergency Contact No#</string>
    <string name="time">Time : </string>
    <string name="routetracker">Route Tracker</string>
    <string name="optionalinfo">The following information is optional, it will be used to help police
        better identify you in a case of emergency</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="existingpin">Existing PIN</string>
    <string name="newpin">New PIN</string>
    <string name="confirm">Confirm</string>
    <string name="endRoute">End Journey</string>
    <string name="forgotPin">Forgot PIN?</string>
    <string name="forgotPinTitle">Forgot PIN</string>
    <string name="forgotPinText">Answer your recovery question below then input a new PIN to reset</string>

    <string-array name="security_array">
        <item>Mother\'s maiden name</item>
        <item>Name of first pet</item>
        <item>First school teacher</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
