<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePinFragment">

    <TextView
        android:id="@+id/changePinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/changepin"
        android:textSize="28sp" />


    <EditText
        android:id="@+id/existingPin"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:ems="4"
        android:hint="@string/existingpin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:maxLines="1" />

    <EditText
        android:id="@+id/newpin"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:ems="4"
        android:hint="@string/newpin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:maxLines="1" />

    <Button
        android:id="@+id/confirmNewPinBtn"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:background="@drawable/left_btn_rounded_corners"
        android:text="@string/confirm"
        android:textColor="#FFFFFF" />

</FrameLayout>