<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingsActivity">

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="660dp"
            android:background="@drawable/left_btn_rounded_corners"
            android:text="@string/DeleteAcc"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/buttonSaveChanges"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCreateUserBack"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="660dp"
            android:background="@drawable/left_btn_rounded_corners"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="660dp"
            android:background="@drawable/left_btn_rounded_corners"
            android:text="@string/savechanges"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/buttonCreateUserBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonChangePin"
            android:layout_width="109dp"
            android:layout_height="52dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/left_btn_rounded_corners"
            android:text="@string/changepin"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchAccelerometerAndGyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="244dp"
            android:text="@string/accel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEmergancyContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="352dp"
            android:ems="10"
            android:hint="@string/emergencycontact"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchPoliceContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="300dp"
            android:text="@string/contactpolice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="408dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="464dp"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextHairColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="524dp"
            android:ems="10"
            android:hint="@string/hair"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="576dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarTime"
            android:layout_width="314dp"
            android:layout_height="19dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="124dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarDistance"
            android:layout_width="314dp"
            android:layout_height="19dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="65dp"
            app:layout_constraintEnd_toEndOf="@+id/seekBarTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="34dp"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="94dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>