<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:ems="4"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:autofillHints="@string/pin"
        android:maxLength="4"
        android:maxLines="1"
        android:textSize="22sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_below="@+id/login_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/left_btn_rounded_corners"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/newuser_btn"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/left_btn_rounded_corners"
        android:text="@string/newuser"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/DEBUG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="13dp"
        android:text="DEBUG" />

</RelativeLayout>